--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
         }
     ],
     "require": {
-        "php": "^8.1",
-        "wpint/support": "@dev"
+        "wpint/contracts": "*",
+        "wpint/support": "*"
     },
     "autoload": {
         "psr-4": {
@@ -18,7 +18,7 @@
         }
     },
     "extra": {
-        "branch-alias": {
+        "branch-alias": { 
             "dev-master": "1.x-dev"
         }
     },
